generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_array_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const arr: number[] = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier arr)
      (type_annotation
        (array_type
          (predefined_type)
        )
      )
      (array
        (number)
        (number)
        (number)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "arr",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
