generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_binary_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
a1 + b1

AST:
(program
  (expression_statement
    (binary_expression
      (identifier a1)
      (identifier b1)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
