generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_call_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
testFn(a2, b2)

AST:
(program
  (expression_statement
    (call_expression
      (identifier testFn)
      (arguments
        (identifier a2)
        (identifier b2)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
